# CommunityWebProject

./: app.db  database.py  db_models.py  main.py  pyproject.toml
controllers/: editpost_controller.py  login_controller.py  makepost_controller.py  password_controller.py  post_controller.py  posts_controller.py  profile_controller.py  signup_controller.py  user_controller.py
models/: ai_model.py  post_model.py  user_model.py
routers/: editpost_router.py  login_router.py  makepost_router.py  password_router.py  post_router.py  posts_router.py  profile_router.py  signup_router.py  user_router.py
